翻译 summary 至 baby care

--- a/I would never send my kids to school我再也不会把孩子送去学校/25.Summary摘要.md
+++ b/I would never send my kids to school我再也不会把孩子送去学校/25.Summary摘要.md
@@ -2,11 +2,11 @@
 
 # 摘要
 
-## Learning
+## 25.1 Learning
 
 ## 学习
 
-### Learn drive
+### 25.1.1 Learn drive
 
 ### 学习内驱力
 
@@ -43,7 +43,7 @@
 - there is a positive feedback loop: learning feeds interest, interest feeds learning (see: [Learning history](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning))
 - 这是一个积极的反馈循环：学习产生兴趣，兴趣产生学习（参见：学习历史）
 
-### Self-directed learning
+### 25.1.2 Self-directed learning
 
 ### 自我导向学习
 
@@ -56,7 +56,7 @@
 - at societal level, self-learning does not lead to communication breakdown due to convergence of knowledge
 - 在社会层面上，自学不会因为知识的趋同而导致沟通中断
 
-### Learning reward
+### 25.1.3 Learning reward
 
 ### 学习奖励
 
@@ -67,7 +67,7 @@
 - instilling passions in a class of students is [rarely effective](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning)
 - 在课堂上灌输激情很少有效果
 
-## Creativity
+## 25.2 Creativity
 
 ## 创造力
 
@@ -92,7 +92,7 @@
 - pranks, rebellions, and disobedience at school are an expression of freedom and may foster better learning
 - 在学校里，恶作剧、反叛和不服从是自由的表现，可以促进更好的学习。
 
-## Sleep
+## 25.3 Sleep
 
 ## 睡眠
 
@@ -127,7 +127,7 @@ For a detailed summary see: [Sleep science summary](https://supermemo.guru/wiki/
 - alarm clock is an invention that is bad for health
 - 闹钟是一种有害健康的发明
 
-## Stress
+## 25.4 Stress
 
 ## 压力
 
@@ -142,11 +142,11 @@ For a detailed summary see: [Sleep science summary](https://supermemo.guru/wiki/
 - pushing the brain to the limits does not benefit the [evolution of the brain](https://supermemo.guru/wiki/Evolution_of_the_brain)
 - 把大脑推向极限对大脑的进化没有好处
 
-## School
+## 25.5 School
 
 ## 学校
 
-### Learning
+### 25.5.1 Learning
 
 ### 学习
 
@@ -175,7 +175,7 @@ For a detailed summary see: [Sleep science summary](https://supermemo.guru/wiki/
 - most often mentioned reasons for linking school are: friends, physical education, good grades, and very rarely, actual progress in learning
 - 最常提到的与学校关联的原因是：朋友、体育课、好成绩，而很少有真正的学习进步。
 
-### Homework
+### 25.5.2 Homework
 
 ### 作业
 
@@ -190,7 +190,7 @@ For a detailed summary see: [Sleep science summary](https://supermemo.guru/wiki/
 - self-directed learning with a correction within a [push zone](https://supermemo.guru/wiki/Push_zone) is the best form of "homework"
 - 在推动区内的修正的帮助下的自我导向学习是「作业」的最好形式
 
-### Cramming
+### 25.5.3 Cramming
 
 ### 死记硬背
 
@@ -203,68 +203,122 @@ For a detailed summary see: [Sleep science summary](https://supermemo.guru/wiki/
 - cramming techniques inspired [incremental reading](https://supermemo.guru/wiki/Incremental_reading), which has nothing to do with cramming
 - 死记硬背技术启发了渐进式阅读，而这与死记硬背毫无关系。
 
-### Dropping out
+### 25.5.4Dropping out
 
 ### 辍学
 
 - great people can be found among college graduates and among high [school dropouts](https://supermemo.guru/wiki/School_dropouts)
+- 大学毕业生和高中辍学者中都有伟人
 - genius is incompatible with schooling. This is why there are many high achieving [school dropouts](https://supermemo.guru/wiki/School_dropouts)
+- 天才与学校教育是不相容的。这就是为什么有许多成绩优异的辍学者。
 - school inherently [suppress creativity](https://supermemo.guru/wiki/Schools_violate_the_Genius_Checklist)
+- 学校内在抑制创造力
 
-### Unschooling
+### 25.5.5 Unschooling
+
+### 非学校教育
 
 - unschooling provides most freedom to develop powerful [learn drive](https://supermemo.guru/wiki/Learn_drive), and paradoxically, produce best learning outcomes
+- 非学校教育为培养强大的学习内驱力提供了最多的自由，而反常的是，它产生了最好的学习成果
 - homeschooling, unschooling and democratic schooling resolve nearly all causes of school hate
+- 在家教育、非学校教育和民主学校教育几乎解决了所有引起讨厌学校的原因
 - ubiquity of information and convergence of knowledge imply that we have fewer reasons to worry about unschooling and/or [free education](https://supermemo.guru/wiki/On_freedom_of_education_and_freedom_of_information)
+- 信息的普及和知识的汇集意味着我们没有多少理由担心非学校教育或自由教育
 - unrestrained development of personality may take three decades. Accelerating that process limits human cognitive powers
+- 不受限制的个性的发展可能需要三十年的时间。加速这一过程限制了人类的认知能力
 - education system invest heavily into teaching things people can easily learn on their own (and with [pleasure](https://supermemo.guru/wiki/Pleasure_of_learning))
+- 教育系统投入大量资金，教授人们可以轻松（且愉快）地自学东西
 
-### Reform
+### 25.5.6 Reform
+
+### 改革
 
 - **freedom** in many platforms is the key to effective educational reform
+- 可**自由**地在多种平台中选择是有效教育改革的关键
 - freedom in education should affect children, students, teachers, educators, parents, innovators, organizers, and more
+- 教育自由应该影响到儿童、学生、教师、教育工作者、家长、创新者、组织者等
 - adult-centric point of view is one of the driving forces behind the failure of modern education
+- 以成人为中心的观点是现代教育失败的驱动力之一
 - changes in brain function from early childhood to adulthood make it virtually impossible for adults to understand child's brain without the help from science (i.e. mostly learning neuroscience)
+- 从幼儿期到成年期，大脑功能的变化使成人在没有科学（主要是关于学习的神经科学）的帮助下几乎不可能理解儿童的大脑
 - mass production of great teachers is no easier than mass production of genius
+- 大规模培养优秀教师并不比大规模培养天才容易
 - grants for students to get to college are as good as grants for students to skip college. All support for the youth is welcome
+- 给学生上大学的助学金和给学生跳过大学的助学金一样好。对所有青年的支持是受欢迎的
 
-## Childhood
+## 25.6 Childhood
 
-### Learning in childhood
+## 童年
+
+### 25.6.1 Learning in childhood
+
+### 童年的学习
 
 - children have a [very bad long-term memory](https://supermemo.guru/wiki/Childhood_amnesia)
+- 儿童的长期记忆力很差
 - bad long-term memory in children results from fast growth, and [re-structuring of the brain](https://supermemo.guru/wiki/Infantile_amnesia_caused_by_neurogenesis)
+- 儿童的长期记忆不好是由于快速发育和大脑结构调整所致
 - poor declarative memories in children imply that formal instruction should best be delayed until the age of 7-9
+- 儿童陈述性记忆差意味着正式教育最好推迟到 7 - 9 岁
 - children learn best via self-directed play
+- 儿童通过自我导向游戏学得最好
 - children [rarely recall](https://supermemo.guru/wiki/Childhood_amnesia) memories from before the age of 2-3
+- 儿童几乎回忆不起 2 - 3 岁以前的记忆
 - children form episodic and declarative memories from birth. The term "[childhood amnesia](https://supermemo.guru/wiki/Childhood_amnesia)" refers to rapid memory turnover in childhood
+- 儿童从出生起就形成断断续续的陈述性记忆。「童年失忆症」一词指的是儿童时期的快速记忆转换
 - lifetime survival of early memories depends on (1) memory formation, (2) forgetting, (3) interference, (4) re-wiring, (5) exposure to memorable events, and (6) post exposure review
+- 早期记忆的终生保留取决于(1)记忆的形成，(2)遗忘，(3)干扰，(4)重新连接，(5)接触难忘的事件，和(6)接触后的回顾
 - earliest memories are often unpleasant (e.g. related to [daycare](https://supermemo.guru/wiki/Daycare_misery))
+- 最早的记忆往往令人不愉快（例如与日托有关）
 - [stress tends to improve learning](https://supermemo.guru/wiki/Stress_reduces_neurogenesis), and undermine brain growth
+- 压力会促进学习，但危害大脑发育
 - maternal separation [improves memories via stress hormones](https://supermemo.guru/wiki/Learning_acceleration_via_stress)
+- 母婴分离通过应激激素改善记忆
 - the myth of children as perfect learning machines comes from their ability to generalize with the use of short-term memory
+- 儿童是完美的学习机器的错误观念来自他们利用短期记忆进行概括的能力
 - children store a lot of information in short-term memory because they spend all their days learning new things
+- 儿童在短期记忆中储存了大量的信息，因为他们整天都在学习新事物
 - children can use words and phrases in the long term because they keep relearning things they use often
+- 儿童可以长期使用单词和短语，因为他们不断地重新学习他们经常使用的东西
 - [early academic teaching may slow down brain development](https://supermemo.guru/wiki/Early_Academic_Training_Retards_Intellectual_Development) and begin a lifelong [hate of learning](https://supermemo.guru/wiki/Why_kids_hate_school%3F)
+- 早期的学业教育可能会减缓大脑的发育，并开始产生终生的厌学情绪
 - kids should **never** be made to learn if they show no interest or refuse (see: [Pleasure of learning](https://supermemo.guru/wiki/Pleasure_of_learning), [Learn drive](https://supermemo.guru/wiki/Learn_drive), and [Push zone](https://supermemo.guru/wiki/Push_zone))
+- 如果孩子没有兴趣或拒绝，就不应该让他们学习（参见：学习的乐趣、学习内驱力和推动区）
 - early acceleration in development does not need to translate to success in adulthood
+- 早期加速发展不需要在成年后转化为成功
 - child prodigies often experience burnout at adolescence or early adulthood. This may be an expression of the early peak in development
+- 神童往往在青春期或成年初期感到精疲力竭。这可能是在早期发展到高峰的一种表现
 - overstimulation can best be prevented by letting kids decide their own exposure to stimuli
+- 防止过度刺激的最好办法是让孩子自己决定是否接受刺激
 - slow brain development may result in better long term outcomes (see: [Infantile amnesia caused by neurogenesis](https://supermemo.guru/wiki/Infantile_amnesia_caused_by_neurogenesis))
+- 大脑发育缓慢可能导致更好的长期结果（参见：由神经形成引起的婴儿健忘症）
 - math and physics geniuses often come from slow or troubled childhood
+- 数学和物理天才往往在童年发展缓慢或糟糕
 - development acceleration induced by [daycare](https://supermemo.guru/wiki/Daycare_misery) may turn out to be harmful
+- 日托所导致的发展加速证明是有害的
 
-### Childhood passions
+### 25.6.2 Childhood passions
+
+### 童年的激情
 
 - relentless lifelong pursuit of goals born from [childhood passions](https://supermemo.guru/wiki/Passion_and_memory) is a solid formula for success
+- 终身不懈地追求源于童年激情的目标是成功的可靠方法
 - minor events in childhood can turn into [lifelong passions](https://supermemo.guru/wiki/Passion_and_memory)
+- 童年的小事可以变成终生的激情
 - child passions have a dramatic positive impact on the power of the [learn drive](https://supermemo.guru/wiki/Learn_drive)
+- 儿童的激情对学习内驱力有巨大的积极影响
 - child passions should be cherished and protected
+- 应珍惜和保护儿童的激情
 - true passions do not need to be stoked up as they serve an inner need
+- 真正的激情不需要被激发，因为它们满足了内心的需要
 - childhood passions can easily get lost due to preoccupation with schooling
+- 由于全神贯注于学校教育，童年的激情很容易消失
 - best formula for helping kids get interested in science by [Neil deGrasse Tyson](https://en.wikipedia.org/wiki/Neil_deGrasse_Tyson) is: "*Get off their back!*"
+- Neil DeGrasse Tyson 帮助孩子们对科学产生兴趣的最佳方法是：「*放开他们的背！*」
 
-### Baby care
+### 25.6.3 Baby care
+
+### 照顾婴儿
 
 - we should follow [hunter-gatherer prescription](https://supermemo.guru/wiki/Hunter-gatherer_childhood) for child care to maximize development and minimize the whole host of behavioral problems
 - [weaning](https://en.wikipedia.org/wiki/Weaning) should be natural and may take up to 4 years. In particular, it should not be accelerated for the sake of daycare
@@ -276,7 +330,9 @@ For a detailed summary see: [Sleep science summary](https://supermemo.guru/wiki/
 - large [behavioral spaces](https://supermemo.guru/wiki/Behavioral_space) with fewer rules are beneficial in cognitive development
 - rigid regiment of rules enforced by strangers has a powerful impact on the brain via learned helplessness
 
-### Daycare
+### 25.6.4 Daycare
+
+### 日托
 
 - daycare is an inferior substitute of good parenting
 - healthy childhood of few concerns without the relegation to [daycare](https://supermemo.guru/wiki/Daycare_misery) is the root of future greatness
@@ -298,7 +354,9 @@ For a detailed summary see: [Sleep science summary](https://supermemo.guru/wiki/
 - potty-training is a waste of time, and can involve unnecessary stress
 - all forms of physiological and developmental acceleration make sense only if they are child-driven, i.e. natural
 
-## Socialization
+## 25.7 Socialization
+
+## 社会化
 
 - socialization can be modelled and optimized
 - for biological reasons, optimization of socialization is achieved best with minimum intervention
@@ -312,23 +370,40 @@ For a detailed summary see: [Sleep science summary](https://supermemo.guru/wiki/
 - social intelligence might have had a significant contribution to the increase in the size of the human brain
 - social intelligence is essential for further progress of mankind on the social platform and well beyond
 
-## Health
+## 25.8 Health
+
+## 健康
 
 - modern [baby management](https://supermemo.guru/wiki/Baby_management) results in harmful restrictions in the exposure to healthy natural stimuli
+- 现代婴儿管理导致对健康自然刺激的有害限制
 - all forms of medical intervention during pregnancy and birth may have negative impact on health
+- 怀孕和分娩期间所有形式的医疗干预都可能对健康产生负面影响
 - moderate exposure to pathogens and allergens is vital for the health of the immune system
+- 适当接触病原体和过敏原对免疫系统的健康至关重要
 - exposure to changes in temperature ensures efficient thermoregulation
+- 暴露在温度变化中可确保有效的温度调节
 - thermogenesis is one of the most powerful body defenses (e.g. against infections)
+- 发烧是人体最强大的防御系统之一（例如防止感染）
 - [benefits of daycare for immunity](https://supermemo.guru/wiki/Daycare_infections) are questionable
+- 日托对免疫力的益处值得怀疑
 - exposure to pathogens is good, sickness is not
+- 接触病原体是好事，生病则不然
 - [daycare infections](https://supermemo.guru/wiki/Daycare_infections) often produce consequences that last a lifetime
+- 日托时的感染往往会造成终生的后果
 - [daycare infections](https://supermemo.guru/wiki/Daycare_infections) often affect entire households
+- 日托时的感染往往影响到整个家庭
 - daycare shifts the burden of disease to younger ages which may have negative impact on long-term cognitive development
+- 日托将疾病负担转移到较小的年龄，这可能对长期认知发展产生负面影响
 - kids in home care are often overprotected, which weakens their immune system
+- 在家照料的儿童往往受到过度保护，这削弱了他们的免疫系
 - we tend to underestimate the power of newborns and toddlers to combat infections on their own
+- 我们往往低估了新生儿和蹒跚学步的儿童独自与感染作斗争的能力
 - we tend to underestimate the power of innate immunity in combating colds and influenza
+- 我们往往低估先天免疫在对抗感冒和流感方面的作用
 - media headlines which claim that home care weakens the immune system are misleading and dangerous
+- 媒体头条新闻声称在家照料削弱了免疫系统，这是误导和危险的
 - in most cases, the best care for young kids is provided by their biological mom with support of members of her family
+- 在大多数情况下，对幼儿的最好照料是由其亲生母亲在其家庭成员的支持下提供的
 - handling infections one at a time seems to be a safe strategy
 - Graham Rook's "old friend" hypothesis implies that we should expose kids to pathogens from natural environments
 - daycare provides excessive exposure to particularly dangerous pathogens in conditions of weakened immune system
@@ -343,7 +418,9 @@ For a detailed summary see: [Sleep science summary](https://supermemo.guru/wiki/
 - healthy diet and lifestyle help combat infections
 - it is important to avoid heavy exposure to viruses during epidemics
 
-### Alzheimer's
+### 25.8.1 Alzheimer's
+
+### 阿兹海默症
 
 - the root neuronal cause of Alzheimer's is excitotoxicity, which comes from excessive cognitive loads on networks with insufficient processing power
 - good learning is preventive, while bad learning may contribute to Alzheimer's
@@ -354,7 +431,9 @@ For a detailed summary see: [Sleep science summary](https://supermemo.guru/wiki/
 - main factors of schooling that lead to excitotoxic injury are: overload, low coherence, high interference, low retention, low [stability](https://supermemo.guru/wiki/Stability), sleep deprivation, [circadian violations](https://supermemo.guru/wiki/Natural_creativity_cycle), [stress](https://supermemo.guru/wiki/Stress_resilience), and [toxic memories](https://supermemo.guru/wiki/Toxic_memory)
 - even though literacy is preventive, bad learning and bad habits taken from school may contribute to Alzheimer's pathology later in life
 
-### ADHD
+### 25.8.2 ADHD
+
+### 注意缺陷多动障碍
 
 - a creative and lively child may easily be branded [ADHD](https://supermemo.guru/wiki/ADHD) by parents, teachers, or "well-wishing" strangers
 - what a teacher recognizes as [ADHD](https://supermemo.guru/wiki/ADHD) may actually be a sign of giftedness
@@ -367,9 +446,13 @@ For a detailed summary see: [Sleep science summary](https://supermemo.guru/wiki/
 - psychiatric drugs target receptors and neurotransmitters, not specific brain structures. As such they are bound to have [side effects](https://supermemo.guru/wiki/Indiscriminate_action_of_psychiatric_drugs)
 - schedule designed around the circadian cycle may mitigate all negative aspects of [ADHD](https://supermemo.guru/wiki/ADHD)
 
-## Domain-specific conclusions
+## 25.9 Domain-specific conclusions
 
-### Learning English
+## 特定领域的结论
+
+### 25.9.1 Learning English
+
+### 学习英语
 
 For details see: [Schools are useless in teaching English!](https://supermemo.guru/wiki/Schools_are_useless_in_teaching_English!)
 
@@ -384,7 +467,9 @@ For details see: [Schools are useless in teaching English!](https://supermemo.gu
 - [SuperMemo](https://supermemo.guru/wiki/SuperMemo) helped me learn English and pass TOEFL at 99 percentile
 - my need to know English sparked the development of [SuperMemo](https://supermemo.guru/wiki/SuperMemo)
 
-### Learning history
+### 25.9.2 Learning history
+
+### 学习历史
 
 For details see: [Learning history: school vs. self-directed learning](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning)
 
@@ -393,7 +478,7 @@ For details see: [Learning history: school vs. self-directed learning](https://s
 - self-learning based on [incremental learning](https://supermemo.guru/wiki/Incremental_learning) proved to be the fastest way to learn history
 - national curricula often feed nationalist sentiments that harm global communication and cooperation
 
-## SuperMemo
+## 25.10 SuperMemo
 
 - long-term memories established by [SuperMemo](https://supermemo.guru/wiki/SuperMemo) keep interests alive and feed lifelong learning
 - a month with [SuperMemo](https://supermemo.guru/wiki/SuperMemo) can bring as much vocabulary as 13 year of schooling (see: [Learning English](https://supermemo.guru/wiki/Learning_English))
@@ -403,7 +488,9 @@ For details see: [Learning history: school vs. self-directed learning](https://s
 - [(internal) interruption](http://super-memory.com/help/il.htm#The_value_of_interruption_in_learning) of [incremental learning](https://supermemo.guru/wiki/Incremental_learning) improves focus, creativity and long-term memory
 - some techniques of [incremental learning](https://supermemo.guru/wiki/Incremental_learning) have been inspired by [mindless cramming](https://supermemo.guru/wiki/Serendipitous_impact_of_mindless_cramming)
 
-## My own experience
+## 25.11 My own experience
+
+## 我自己的经历
 
 - catching a cold was a joyous moment in my young life: I did not have to go to school!
 - at high school, I would learn 16 times faster on my own during summer vacation than during the school year (see: [Learning history](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning))
