--- a/I would never send my kids to school我再也不会把孩子送去学校/07.Learn drive vs. learned helplessness学习内驱力与习得性无助.md
+++ b/I would never send my kids to school我再也不会把孩子送去学校/07.Learn drive vs. learned helplessness学习内驱力与习得性无助.md
@@ -89,7 +89,7 @@ My writing about learned helplessness may sound a bit dramatic or even depressin
 - Learned helplessness begins with forceful weaning (natural weaning may take 3-4 years)
 - 习得性无助始于强行断奶（自然断奶可能需要3-4年）
 - Learned helplessness continues in daycare with a rigid regiment of rules enforced by strangers
-- 由于陌生人强制执行的严格管制规则，习得性无助在日托所持续存在
+- 由于陌生人强制执行的严格管制规则，习得性无助在幼儿园持续存在
 - Large [behavioral spaces](https://supermemo.guru/wiki/Behavioral_space) with fewer rules are beneficial in cognitive development
 - 规则较少的广阔行为空间有利于认知发展
 - Unrestrained development of personality may take three decades. Accelerating that process limits human cognitive powers
