--- a/I would never send my kids to school我再也不会把孩子送去学校/25.Summary摘要.md
+++ b/I would never send my kids to school我再也不会把孩子送去学校/25.Summary摘要.md
@@ -269,7 +269,7 @@ For a detailed summary see: [Sleep science summary](https://supermemo.guru/wiki/
 - lifetime survival of early memories depends on (1) memory formation, (2) forgetting, (3) interference, (4) re-wiring, (5) exposure to memorable events, and (6) post exposure review
 - 早期记忆的终生保留取决于(1)记忆的形成，(2)遗忘，(3)干扰，(4)重新连接，(5)接触难忘的事件，和(6)接触后的回顾
 - earliest memories are often unpleasant (e.g. related to [daycare](https://supermemo.guru/wiki/Daycare_misery))
-- 最早的记忆往往令人不愉快（例如与日托有关）
+- 最早的记忆往往令人不愉快（例如与幼儿园有关）
 - [stress tends to improve learning](https://supermemo.guru/wiki/Stress_reduces_neurogenesis), and undermine brain growth
 - 压力会促进学习，但危害大脑发育
 - maternal separation [improves memories via stress hormones](https://supermemo.guru/wiki/Learning_acceleration_via_stress)
@@ -295,7 +295,7 @@ For a detailed summary see: [Sleep science summary](https://supermemo.guru/wiki/
 - math and physics geniuses often come from slow or troubled childhood
 - 数学和物理天才往往在童年发展缓慢或糟糕
 - development acceleration induced by [daycare](https://supermemo.guru/wiki/Daycare_misery) may turn out to be harmful
-- 日托所导致的发展加速证明是有害的
+- 幼儿园所导致的发展加速证明是有害的
 
 ### 25.6.2 Childhood passions
 
@@ -321,18 +321,27 @@ For a detailed summary see: [Sleep science summary](https://supermemo.guru/wiki/
 ### 照顾婴儿
 
 - we should follow [hunter-gatherer prescription](https://supermemo.guru/wiki/Hunter-gatherer_childhood) for child care to maximize development and minimize the whole host of behavioral problems
+- 我们应该遵循猎人-采集者的儿童照料方法，最大化发展，最小化各种行为问题
 - [weaning](https://en.wikipedia.org/wiki/Weaning) should be natural and may take up to 4 years. In particular, it should not be accelerated for the sake of daycare
+- 断奶应该是自然的，可能需要长达 4 年的时间。特别注意，不应该为了幼儿园而加快这一进程
 - forceful weaning begins the negative process in which child's brain adapts to the environment via [learned helplessness](https://supermemo.guru/wiki/Learned_helplessness_vs._learn_drive)
+- 强行断奶开始了一个消极的过程，在这个过程中，孩子的大脑通过习得性的无助来适应环境
 - all limits on the freedom of movement, slow down baby development
+- 限制行动自由会减缓婴儿发展速度
 - for brain development, baby wearing is superior to using strollers
+- 在大脑发育方面，婴儿穿戴比使用婴儿车要好
 - keeping kids safe with proofing makes it hard to teach them safety
+- 通过防护来保证孩子们的安全，很难教会他们什么是安全
 - playing Mozart to a womb is more likely to scare the baby than to produce a music genius
+- 把莫扎特演奏到子宫里更有可能吓到孩子，而不是创造出一个音乐天才
 - large [behavioral spaces](https://supermemo.guru/wiki/Behavioral_space) with fewer rules are beneficial in cognitive development
+- 较大的行为空间和较少的规则有利于认知发展
 - rigid regiment of rules enforced by strangers has a powerful impact on the brain via learned helplessness
+- 陌生人强制执行的严格管制规则通过引起婴儿的习得性无助对大脑产生强大的影响
 
 ### 25.6.4 Daycare
 
-### 日托
+### 幼儿园
 
 - daycare is an inferior substitute of good parenting
 - healthy childhood of few concerns without the relegation to [daycare](https://supermemo.guru/wiki/Daycare_misery) is the root of future greatness
@@ -385,15 +394,15 @@ For a detailed summary see: [Sleep science summary](https://supermemo.guru/wiki/
 - thermogenesis is one of the most powerful body defenses (e.g. against infections)
 - 发烧是人体最强大的防御系统之一（例如防止感染）
 - [benefits of daycare for immunity](https://supermemo.guru/wiki/Daycare_infections) are questionable
-- 日托对免疫力的益处值得怀疑
+- 幼儿园对免疫力的益处值得怀疑
 - exposure to pathogens is good, sickness is not
 - 接触病原体是好事，生病则不然
 - [daycare infections](https://supermemo.guru/wiki/Daycare_infections) often produce consequences that last a lifetime
-- 日托时的感染往往会造成终生的后果
+- 幼儿园时的感染往往会造成终生的后果
 - [daycare infections](https://supermemo.guru/wiki/Daycare_infections) often affect entire households
-- 日托时的感染往往影响到整个家庭
+- 幼儿园时的感染往往影响到整个家庭
 - daycare shifts the burden of disease to younger ages which may have negative impact on long-term cognitive development
-- 日托将疾病负担转移到较小的年龄，这可能对长期认知发展产生负面影响
+- 幼儿园将疾病负担转移到较小的年龄，这可能对长期认知发展产生负面影响
 - kids in home care are often overprotected, which weakens their immune system
 - 在家照料的儿童往往受到过度保护，这削弱了他们的免疫系
 - we tend to underestimate the power of newborns and toddlers to combat infections on their own
