summary中的daycare和health翻译完成

--- a/I would never send my kids to school我再也不会把孩子送去学校/25.Summary摘要.md
+++ b/I would never send my kids to school我再也不会把孩子送去学校/25.Summary摘要.md
@@ -344,24 +344,43 @@ For a detailed summary see: [Sleep science summary](https://supermemo.guru/wiki/
 ### 幼儿园
 
 - daycare is an inferior substitute of good parenting
+- 幼儿园是良好家庭教育的低劣替代品
 - healthy childhood of few concerns without the relegation to [daycare](https://supermemo.guru/wiki/Daycare_misery) is the root of future greatness
+- 没有被送到幼儿园的顾虑的健康的童年是未来伟大的根源
 - in western societies, there is a social pressure to send kids to daycare
+- 在西方社会，社会压力促使人们送孩子去幼儿园
 - to a large extent, social pressure originates in self-exculpatory mindset of young career-oriented parents
+- 在很大程度上，社会压力源自以职业为导向的年轻父母的自我开脱心态
 - peer pressure in favor of daycare is based on a series of myths about the biology of child development
+- 支持幼儿园的同侪压力是基于关于儿童发育生物学的一系列错误观念
 - daycare acceleration is often a short-term phenomenon with poorer long-term outcomes
+- 幼儿园加速孩子发展往往是一种短期现象，长期效果较差
 - daycare acceleration works only for kids from families characterized by low resources (incl. time), neglect, pathology, and/or poor education
+- 幼儿园加速孩子发展只适合来自以缺乏资源（包括时间）、怠慢、病态或低教育程度为特征的家庭的孩子
 - daycare boost to immunity is a myth
+- 幼儿园能提高免疫力是错误观念
 - daycare socialization is often [negative](https://en.wikipedia.org/wiki/Socialization#Negative_socialization)
+- 幼儿园中的社会化经常是负面的
 - daycare results in an increase in aggression and other behavioral problems
+- 幼儿园导致攻击性和其他行为问题增加
 - for many kids, daycare begins too early and necessitates forceful waking
+- 对许多儿童来说，幼儿园的日程开始得太早，必须强迫醒来
 - for most kids, daycare violates [natural creativity cycle](https://supermemo.guru/wiki/Natural_creativity_cycle)
+- 对大多数孩子来说，幼儿园妨碍了自然的创造力周期
 - for most kids, esp. young kids, or early in the process, daycare involves significant stress
+- 对大多数孩子来说，尤其是，年幼的孩子，或者在这个过程的初期，幼儿园就带来很大的压力
 - for small kids, maternal separation is bad for the brain
+- 对于小孩子来说，母婴分离对大脑不好
 - kids suffering from chronic daycare stress are likely to experience inferior long-term brain development
+- 患有慢性幼儿园压力的儿童可能会长期大脑发育低下
 - [learned helplessness](https://supermemo.guru/wiki/Learned_helplessness) of daycare increases the likelihood of depression in adulthood
+- 幼儿园的习得性无助增加了成年后抑郁的可能性
 - daycare often produces a positive feedback loop: slower development, lower immunity, infections, antibiotics, missed days, more stress, more sleep deprivation, etc.
+- 幼儿园通常会产生一个正反馈循环：发育缓慢、免疫力低下、感染、抗生素、缺勤、压力增大、睡眠不足等等
 - potty-training is a waste of time, and can involve unnecessary stress
+- 上厕所训练是浪费时间，可能会带来不必要的压力
 - all forms of physiological and developmental acceleration make sense only if they are child-driven, i.e. natural
+- 所有形式的生理和发展加速只有在儿童自愿（即自然）的情况下才有意义
 
 ## 25.7 Socialization
 
@@ -414,18 +433,31 @@ For a detailed summary see: [Sleep science summary](https://supermemo.guru/wiki/
 - in most cases, the best care for young kids is provided by their biological mom with support of members of her family
 - 在大多数情况下，对幼儿的最好照料是由其亲生母亲在其家庭成员的支持下提供的
 - handling infections one at a time seems to be a safe strategy
+- 每次处理一个感染似乎是一个安全的策略
 - Graham Rook's "old friend" hypothesis implies that we should expose kids to pathogens from natural environments
+- Graham Rook 的「老朋友」猜想暗示我们应该让孩子接触来自自然环境的病原体
 - daycare provides excessive exposure to particularly dangerous pathogens in conditions of weakened immune system
+- 在免疫系统低下的情况下，幼儿园提供过量的特别危险的病原体接触
 - respiratory infections are one of the chief destroyers of productivity
+- 呼吸道感染是破坏生产力的主要因素之一
 - it is possible to avoid infections for decades in otherwise vulnerable individuals
+- 在其他易受感染的个体中，几十年内避免感染是可能的
 - [good sleep](http://super-memory.com/articles/sleep.htm) is essential for immunity
+- 良好的睡眠对免疫系统至关重要
 - alarm clocks destroy the quality of sleep
+- 闹钟会破坏睡眠质量
 - winter swimming can be helpful in preventing respiratory infections
+- 冬泳有助于预防呼吸道感染
 - moderate exercise helps prevent infections
+- 适度运动有助于预防感染
 - [stress management](https://supermemo.guru/wiki/Stress_resilience) is essential for immunity
+- 压力管理对免疫至关重要
 - rehydration helps combat infections
+- 补水有助于对抗感染
 - healthy diet and lifestyle help combat infections
+- 健康的饮食和生活方式有助于防治感染
 - it is important to avoid heavy exposure to viruses during epidemics
+- 在流行病常发生期间避免大量接触病毒，这一点很重要
 
 ### 25.8.1 Alzheimer's
 
