Summary 翻译至 Alzheimer's

--- a/I would never send my kids to school我再也不会把孩子送去学校/25.Summary摘要.md
+++ b/I would never send my kids to school我再也不会把孩子送去学校/25.Summary摘要.md
@@ -387,16 +387,27 @@ For a detailed summary see: [Sleep science summary](https://supermemo.guru/wiki/
 ## 社会化
 
 - socialization can be modelled and optimized
+- 社会化可以被建模和优化
 - for biological reasons, optimization of socialization is achieved best with minimum intervention
+- 出于生物学原因，社会化的优化是在最少干预的情况下实现的
 - individualistic socializations serves the good of society along principles similar to market economics
+- 个人主义社会化按照类似于市场经济的原则为社会服务
 - optimum socialization can be achieved in abstraction of value and in different value systems
+- 在价值抽象和不同的价值体系中可以实现最佳的社会化
 - individual personality and values may determine the optimum level/degree of socialization
+- 个人个性和价值观可能决定社会化的最佳水平/程度
 - socialization is a lifelong learning process
+- 社会化是一个终身学习的过程
 - early socialization should focus on establishing a lifelong learning platform
+- 早期社会化应以建立终身学习平台为重点
 - coercive socialization may backfire and result in asociality or anti-social behaviors
+- 强制社会化可能适得其反，导致不合群或反社会行为
 - [critical periods](https://supermemo.guru/wiki/Critical_period) in development make it important to opt against early socialization in [daycare](https://supermemo.guru/wiki/Daycare_misery)
+- 在发展的关键时期，反对在幼儿园中过早的社会化很重要
 - social intelligence might have had a significant contribution to the increase in the size of the human brain
+- 社会智力可能对人类大脑体积的增加有很大的贡献
 - social intelligence is essential for further progress of mankind on the social platform and well beyond
+- 社会智力对于人类在社会平台上进一步发展是必不可少的
 
 ## 25.8 Health
 
@@ -461,16 +472,24 @@ For a detailed summary see: [Sleep science summary](https://supermemo.guru/wiki/
 
 ### 25.8.1 Alzheimer's
 
-### 阿兹海默症
+### 老年痴呆症
 
 - the root neuronal cause of Alzheimer's is excitotoxicity, which comes from excessive cognitive loads on networks with insufficient processing power
+- 老年痴呆症的根本神经原因是兴奋性毒性，这是由于处理能力不足的网络上的认知负荷过大所致
 - good learning is preventive, while bad learning may contribute to Alzheimer's
+- 良好的学习可以预防老年痴呆症，而不良的学习可能会导致老年痴呆症
 - the best reassurance for the positive impact of learning on prevention of Alzheimer's is the adherence to the [Fundamental law of learning](https://supermemo.guru/wiki/Fundamental_law_of_learning)
+- 学习对预防老年痴呆症的积极影响的最好保证是遵守学习的基本规律
 - schooling inherently violates the [Fundamental law of learning](https://supermemo.guru/wiki/Fundamental_law_of_learning) through its coercive nature
+- 学校教育本质上违反了学习的基本规律，因为它具有强制性
 - for many kids, schooling leads to neural injury, which may be instantly apparent, e.g. in developing depression
+- 对许多孩子来说，上学会导致神经损伤，这一点可能马上就会显现出来，例如发展成抑郁症
 - despite all calls for reforms, mainstream schooling in the western world still keeps evolving in the wrong direction: more haste, more stress, greater loads, less coherence, and more neural injury
+- 尽管各方都在呼吁改革，但西方世界的主流学校教育仍在朝着错误的方向发展：更加匆忙、压力更大、负担更重、连贯性更低、神经损伤更严重
 - main factors of schooling that lead to excitotoxic injury are: overload, low coherence, high interference, low retention, low [stability](https://supermemo.guru/wiki/Stability), sleep deprivation, [circadian violations](https://supermemo.guru/wiki/Natural_creativity_cycle), [stress](https://supermemo.guru/wiki/Stress_resilience), and [toxic memories](https://supermemo.guru/wiki/Toxic_memory)
+- 导致兴奋性毒性损伤的学校教育的主要因素是：超负荷、低连贯性、高干扰、低记忆保留、低稳定性、睡眠剥夺、昼夜节律失调、压力和有毒记忆
 - even though literacy is preventive, bad learning and bad habits taken from school may contribute to Alzheimer's pathology later in life
+- 尽管识字是一种预防措施，但不良学习和从学校学到的不良习惯可能会导致晚年老年痴呆症的病理变化
 
 ### 25.8.2 ADHD
 
