Summary 翻译至 ADHD

--- a/I would never send my kids to school我再也不会把孩子送去学校/25.Summary摘要.md
+++ b/I would never send my kids to school我再也不会把孩子送去学校/25.Summary摘要.md
@@ -496,15 +496,25 @@ For a detailed summary see: [Sleep science summary](https://supermemo.guru/wiki/
 ### 注意缺陷多动障碍
 
 - a creative and lively child may easily be branded [ADHD](https://supermemo.guru/wiki/ADHD) by parents, teachers, or "well-wishing" strangers
+- 一个有创造力、活泼的孩子很容易被父母、老师或「善意」的陌生人打上 ADHD 的污名
 - what a teacher recognizes as [ADHD](https://supermemo.guru/wiki/ADHD) may actually be a sign of giftedness
+- 被老师当成 ADHD，实际上可能是天赋的表现
 - schooling provides an ideal breeding ground for ADHD-like problems and symptoms in otherwise healthy kids
+- 学校教育为健康儿童出现类似 ADHD 的问题和症状提供了理想的温床
 - diagnostic criteria for [ADHD](https://supermemo.guru/wiki/ADHD) in DSM-5 (2013) have been relaxed, which may lead to further overdiagnosis
+- DSM-5(2013年)对ADHD的诊断标准已经放宽，这可能导致进一步的过度诊断
 - ADHD may be managed better by understanding the circadian and homeostatic aspects of mental activity
+- 通过了解心理活动的昼夜节律和稳态方面，可以更好地控制 ADHD
 - circadian disruption may amplify symptoms of ADHD, or lead to a wrong diagnosis
+- 昼夜节律紊乱可能会加强 ADHD 的症状，或导致错误的诊断
 - free running sleep is vital for managing ADHD
+- 自由运转睡眠对控制 ADHD 至关重要
 - before administering medication, e.g. Ritalin, children should be evaluated in free running condition, i.e. away from pressures of schooling (see: [prescription](https://supermemo.guru/wiki/ADHD))
+- 在使用药物（如利他林）之前，应在自由活动的情况下对儿童进行评估，即在远离学校压力的情况下（参见：处方）
 - psychiatric drugs target receptors and neurotransmitters, not specific brain structures. As such they are bound to have [side effects](https://supermemo.guru/wiki/Indiscriminate_action_of_psychiatric_drugs)
+- 精神药物针对的是受体和神经递质，而不是特定的大脑结构。因此，它们必然会产生副作用
 - schedule designed around the circadian cycle may mitigate all negative aspects of [ADHD](https://supermemo.guru/wiki/ADHD)
+- 围绕生理周期设计的时间表可以减轻 ADHD 的所有负面影响
 
 ## 25.9 Domain-specific conclusions
 
