--- a/I would never send my kids to school我再也不会把孩子送去学校/25.Summary摘要.md
+++ b/I would never send my kids to school我再也不会把孩子送去学校/25.Summary摘要.md
@@ -526,16 +526,28 @@ For a detailed summary see: [Sleep science summary](https://supermemo.guru/wiki/
 
 For details see: [Schools are useless in teaching English!](https://supermemo.guru/wiki/Schools_are_useless_in_teaching_English!)
 
+详情参见：学校在英语教学中毫无用处！
+
 - English is now a global means of communication
+- 英语现在是一种全球化的交流手段
 - all citizens of the globe should know English
+- 全球所有公民都应懂英语
 - most kids in Europe learn English
+- 欧洲的大多数孩子都学英语
 - learning a language is costly
+- 学习一门语言代价高昂
 - kids who learn English only at school can hardly ever speak English
+- 只在学校学习英语的孩子几乎从来不会说英语
 - (formal) language learning in children is largely futile
+- 儿童的（正式）语言学习在很大程度上是徒劳的
 - a month with [SuperMemo](https://supermemo.guru/wiki/SuperMemo) can bring as much vocabulary as 13 year of schooling (see: [Learning English](https://supermemo.guru/wiki/Learning_English))
+- 使用 SuperMemo 一个月所带来的词汇量相当于 13 年的学校教育所带来的（参见：学习英语）
 - in the course of 6 years, I learned no English at school
+- 在 6 年的时间里，我在学校里没有学到英语
 - [SuperMemo](https://supermemo.guru/wiki/SuperMemo) helped me learn English and pass TOEFL at 99 percentile
+- SuperMemo 帮助我学习英语，并以 99 分的成绩通过托福考试
 - my need to know English sparked the development of [SuperMemo](https://supermemo.guru/wiki/SuperMemo)
+- 我对英语的需求激发了 SuperMemo 的发展
 
 ### 25.9.2 Learning history
 
@@ -543,29 +555,51 @@ For details see: [Schools are useless in teaching English!](https://supermemo.gu
 
 For details see: [Learning history: school vs. self-directed learning](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning)
 
+详情参见：学习历史：学校与自我导向学习
+
 - average high school graduate knows little history
+- 普通高中毕业生对历史知之甚少
 - most kids gain just about one [item](https://supermemo.guru/wiki/SuperMemo_item) of history knowledge per week
+- 大多数孩子每周只学一个历史知识点
 - self-learning based on [incremental learning](https://supermemo.guru/wiki/Incremental_learning) proved to be the fastest way to learn history
+- 基于渐进学习的自学被证明是学习历史的最快方法
 - national curricula often feed nationalist sentiments that harm global communication and cooperation
+- 国家制定的课程往往助长损害全球交流与合作的民族主义情绪
 
 ## 25.10 SuperMemo
 
+## SuperMemo
+
 - long-term memories established by [SuperMemo](https://supermemo.guru/wiki/SuperMemo) keep interests alive and feed lifelong learning
+- SuperMemo 建立的长期记忆使兴趣生机勃勃，并促进终身学习
 - a month with [SuperMemo](https://supermemo.guru/wiki/SuperMemo) can bring as much vocabulary as 13 year of schooling (see: [Learning English](https://supermemo.guru/wiki/Learning_English))
+- 使用 SuperMemo 一个月所带来的词汇量相当于 13 年的学校教育所带来的（参见：学习英语）
 - poor employment of [SuperMemo](https://supermemo.guru/wiki/SuperMemo) can undermine the [learn drive](https://supermemo.guru/wiki/Learn_drive) (the mechanisms is similar to schooling)
+- 不正确的使用 SuperMemo 会削弱学习内驱力（其机制类似于学校教育）
 - self-learning based on [incremental learning](https://supermemo.guru/wiki/Incremental_learning) is the fastest way of long-term learning
+- 基于渐进学习的自学是最快的长期学习方式
 - [incremental learning](https://supermemo.guru/wiki/Incremental_learning) is the most powerful tool for developing a strong [learn drive](https://supermemo.guru/wiki/Learn_drive)
+- 渐进学习是培养强大学习内驱力的最有力工具
 - [(internal) interruption](http://super-memory.com/help/il.htm#The_value_of_interruption_in_learning) of [incremental learning](https://supermemo.guru/wiki/Incremental_learning) improves focus, creativity and long-term memory
+- 渐进学习（内部）中断可提高注意力、创造力和长期记忆
 - some techniques of [incremental learning](https://supermemo.guru/wiki/Incremental_learning) have been inspired by [mindless cramming](https://supermemo.guru/wiki/Serendipitous_impact_of_mindless_cramming)
+- 一些渐进学习的技巧受到了盲目填鸭式学习的启发
 
 ## 25.11 My own experience
 
 ## 我自己的经历
 
 - catching a cold was a joyous moment in my young life: I did not have to go to school!
+- 感冒是我年轻时一个快乐的时刻：我不必去上学！
 - at high school, I would learn 16 times faster on my own during summer vacation than during the school year (see: [Learning history](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning))
+- 在高中，暑假期间我独自学习的速度是在学校的 16 倍（参见：学习历史）
 - schools have been extremely efficient in destroying my enthusiasm for schooling (at all levels of education)
+- 学校极有效率地破坏了我在学校学习的热情（在各教育的各个阶段）
 - in the course of 12 years, I learned [no history at school](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning)
+- 在 12 年的时间里，我在学校里没有学到任何历史
 - in the course of 8 years, I learned [very little English](https://supermemo.guru/wiki/Schools_are_useless_in_teaching_English!) at school
+- 在 8 年的时间里，我在学校里学的英语很少
 - [SuperMemo](https://supermemo.guru/wiki/SuperMemo) accelerated my learning in 1987
+- 在 1987 年，SuperMemo 加速了我的学习
 - [incremental reading](https://supermemo.guru/wiki/Incremental_reading) accelerated my learning in 2000
+- 渐进阅读加速了我在 2000 年的学习
